<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@mipmap/background"
    tools:context=".Ui.SplashScreen"
    android:padding="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/main"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:src="@mipmap/logoh"
            android:layout_marginTop="40dp"
            android:contentDescription="App Logo" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/bg_login_card"
            android:padding="24dp"
            android:layout_marginTop="32dp"
            android:elevation="4dp"
            android:layout_marginBottom="24dp">

            <TextView
                android:id="@+id/tvLoginTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textStyle="bold"
                android:textSize="22sp"
                android:layout_gravity="center_horizontal"
                android:textColor="#000000"
                android:layout_marginBottom="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mobile_email_id"
                android:textSize="14sp"
                android:textColor="#666666"
                android:layout_marginBottom="8dp" />

            <EditText
                android:id="@+id/etMobileEmail"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/enter_mobile_number_email"
                android:background="@drawable/bg_input"
                android:paddingHorizontal="12dp"
                android:inputType="textEmailAddress"
                android:textColorHint="#999999" />



            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnVerifyOTP"
                style="@style/MyMaterialButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="16dp"
                android:text="@string/verify_with_otp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:layout_gravity="center"
                android:textColor="#888888"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:weightSum="2">


                <Button
                    android:id="@+id/btnMpin"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:text="@string/mpin"
                    android:drawableLeft="@mipmap/lock"
                    android:backgroundTint="#FFFFFF"
                    android:textColor="#000000"
                    android:layout_marginEnd="8dp" />

                <Button
                    android:id="@+id/btnBiometric"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:text="@string/biometric"
                    android:drawableLeft="@mipmap/biomatirc"
                    android:backgroundTint="#FFFFFF"
                    android:textColor="#000000"
                    android:layout_marginStart="8dp" />


            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
